fix: lỗi init game ra 2 ball